--- a/scss/_style-section4.scss
+++ b/scss/_style-section4.scss
@@ -71,8 +71,16 @@
                 border-radius: 999px;
                 background: var(--Main-brand-Primary-Mid-Accent, #00A300);
 
+                &:hover{
+                    background: #006b00;
+                }
+
                 body.dark & {
                     background: var(--Functional-Neutral-Darkest, #1F1F1F);
+                    
+                    &:hover{
+                        background: #006b00;
+                    }
                 }
 
                 @media screen and (max-width: 620px) {
