--- a/style.css
+++ b/style.css
@@ -174,6 +174,9 @@ body.dark .banner-hero__img picture img {
   border-radius: 999px;
   background: var(--Functional-Neutral-Lightest, #F5F5F5);
 }
+.banner-hero__content__btns .leia-mais:hover {
+  background: var(--color-neutral-200, #e0e0e0);
+}
 @media screen and (max-width: 620px) {
   .banner-hero__content__btns .leia-mais {
     width: 100%;
@@ -205,6 +208,9 @@ body.dark .banner-hero__img picture img {
   gap: 8px;
   border-radius: 999px;
   border: 1px solid var(--Functional-Neutral-Light, #E0E0E0);
+}
+.banner-hero__content__btns .migracao:hover {
+  border: 2px solid var(--Functional-Neutral-Light, #E0E0E0);
 }
 @media screen and (max-width: 620px) {
   .banner-hero__content__btns .migracao {
@@ -840,8 +846,14 @@ body.dark .inner-banner-main {
   border-radius: 999px;
   background: var(--Main-brand-Primary-Mid-Accent, #00A300);
 }
+.nio-component__content__text a:hover {
+  background: #006b00;
+}
 body.dark .nio-component__content__text a {
   background: var(--Functional-Neutral-Darkest, #1F1F1F);
+}
+body.dark .nio-component__content__text a:hover {
+  background: #006b00;
 }
 @media screen and (max-width: 620px) {
   .nio-component__content__text a {
